--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: Welcome to the Shridharsk’s homepage!
+description: Great recepies are being made here, keep an eye for more
